--- a/header.html
+++ b/header.html
@@ -36,15 +36,15 @@
                 <nav class="header__menu">
                     <ul>
                         <!-- Início -->
-                        <!-- <li class="active"><a class="arrow" href="./index.html">INÍCIO</a></li> -->
+                        <!-- <li class="active"><a class="arrow" href="index.html">INÍCIO</a></li> -->
 
                         <!-- A Clínica -->
-                        <li><a class="arrow" href="./about.html">A Clínica <span class="dropdown-arrow"></span></a>
+                        <li><a class="arrow" href="about.html">A Clínica <span class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="./about.html">Sobre Nós</a></li>
-                                <li><a href="./team.html">Equipa</a></li>
-                                <li><a href="./humanitario.html">O nosso trabalho humanitário</a></li>
-                                <li><a href="./info.html">Pedido de informação/ Agendamento</a></li>
+                                <li><a href="about.html">Sobre Nós</a></li>
+                                <li><a href="team.html">Equipa</a></li>
+                                <li><a href="humanitario.html">O nosso trabalho humanitário</a></li>
+                                <li><a href="info.html">Pedido de informação/ Agendamento</a></li>
                             </ul>
                         </li>
 
@@ -53,9 +53,8 @@
                             <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                 <ul class="dropdown menu">
                                     <li>
-                                        <span>Amamentação</span>
+                                        <span><img src="img/icons/amamentacao.png" alt="">Amamentação</span>
                                         <ul class="dropdown-sec">
-
                                             <li><a href="pages/amament-pre-parto.html#pre">Consulta
                                                     Pré-parto</a></li>
                                             <li><a href="pages/amament-pre-parto.html#pos">Consulta
@@ -70,15 +69,15 @@
                                     </li>
                                     <li>
                                         <!-- <span>Cirurgia</span>
-                                                                <ul class="dropdown-sec">
-                                                                    <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
-                                                                    </li>
-                                                                    <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
-                                                                    <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
-                                                                            superficiais</a></li>
-                                                                </ul>
-                                                                <br> -->
-                                        <span>Enfermagem
+                                                                                        <ul class="dropdown-sec">
+                                                                                            <li><a href="cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
+                                                                                            </li>
+                                                                                            <li><a href="cirurgia.html#anel">Circuncisão com anel</a></li>
+                                                                                            <li><a href="cirurgia.html#sutura">Sutura de feridas
+                                                                                                    superficiais</a></li>
+                                                                                        </ul>
+                                                                                        <br> -->
+                                        <span><img src="img/icons/ENFERM.png" alt="">Enfermagem
                                         </span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/enfermagem.html#domicilio">Apoio domiciliário no
@@ -89,17 +88,17 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Nutrição</span>
+                                        <span><img src="img/icons/Nutrição.png" alt="">Nutrição</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/nutricao.html#A">Nutrição Geral</a></li>
                                             <li><a href="pages/nutricao.html#B">Nutrição Infantil</a></li>
-                                            <!-- <li><a href="pages/nutricao.html#C">Diabetes Gestacional</a></li> -->
+                                            <!-- <li><a href="nutricao.html#C">Diabetes Gestacional</a></li> -->
                                             <li><a href="pages/nutricao.html#D">Pré-conceção</a></li>
                                             <li><a href="pages/nutricao.html#E">Pré-natal</a></li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Pediatria</span>
+                                        <span><img src="img/icons/pediatria-alt.png" alt="">Pediatria</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/pediatria.html#A">Pré-natal</a></li>
                                             <li><a href="pages/pediatria.html#B">Rotina</a></li>
@@ -109,7 +108,8 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Terapia ocupacional</span>
+                                        <span><img src="img/icons/terapia-white.png" alt="">Terapia
+                                            ocupacional</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/terapia.html#A">Infantil</a></li>
                                             <li><a href="pages/terapia.html#B">Neurológica</a></li>
@@ -119,7 +119,8 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Testes diagnósticos</span>
+                                        <span><img src="img/icons/teste.png" alt="">Testes
+                                            diagnósticos</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/teste.html#A">Teste do pezinho</a></li>
                                             <li><a href="pages/teste.html#B">Teste rápido de amigdalite bacteriana</a>
@@ -133,7 +134,7 @@
                         </li>
 
                         <!-- Serviços Adicionais -->
-                        <li><a class="arrow" href="./additional-services.html">Vacinação<span
+                        <li><a class="arrow" href="additional-services.html">Vacinação<span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
                                 <li><a href="pages/vacinacao.html#A">Adulto</a></li>
@@ -171,6 +172,7 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="#">Plano de treino para a gravidez</a></li>
                                         </ul>
+
                                     </li>
                                     <li>
                                         <span>Preparação para o parto</span>
@@ -192,7 +194,7 @@
                         </li>
 
                         <!-- Serviços Adicionais -->
-                        <li><a class="arrow" href="./additional-services.html">Apoio ao domicílio <span
+                        <li><a class="arrow" href="pages/domicilio.html">Apoio ao domicílio <span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
                                 <li><a href="pages/domicilio.html#A">Amamentação</a></li>
@@ -200,8 +202,7 @@
                                 <li><a href="pages/teste.html#A">Teste do pezinho</a></li>
                             </ul>
                         </li><!-- Serviços Adicionais -->
-                        <li><a class="arrow" href="./additional-services.html">Workshops<span
-                                    class="dropdown-arrow"></span></a>
+                        <li><a class="arrow">Workshops<span class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
                                 <li><a href="pages/workshop.html">Workshops</a></li>
                                 <li><a href="pages/workshop-amament.html">Amamentação</a></li>
@@ -216,9 +217,10 @@
                             </ul>
                         </li>
                         <a href="#" class="primary-btn" style="
-                                                                        right: 0;
-                                                                        position: absolute; margin-top: 0.4rem;
-                                                                    "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                                                                                right: 0;
+                                                                                                position: absolute; margin-top: 0.4rem;
+                                                                                            "> <i
+                                class="fa fa-lock"></i> Área Reservada</a>
                     </ul>
 
                 </nav>
