--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
                                     <i class="fa fa-quote-left"></i>
                                 </div>
                                 <div class="testimonial__author__text">
-                                    <h5>Catanis Greimar</h5>
-                                    <span>Businesswoman</span>
+                                    <h5>Joana Bettencourt</h5>
+                                    <span>M^se</span>
                                 </div>
                             </div>
                             <div class="rating">
@@ -363,8 +363,16 @@
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                             </div>
-                            <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
-                                vel facilisis ut labore et dolore magna aliqua accumsan lacus vel facilisis. </p>
+                            <p>A Dra Inês Claudino é uma Pediatra excepcional que se destaca pela sua competência e
+                                enorme
+                                dedicação. É uma pessoa super meiga, já foi Pediatra dos meus filhos mais velhos e é
+                                agora, também, a Pediatra do meu
+                                bebé de 3 anos, que adora ir ao consultório. A sua disponibilidade e capacidade de criar
+                                ambientes seguros e
+                                descontraídos em consulta são notáveis. Além disso, a prudência é uma das suas
+                                características evitando a prescrição
+                                excessiva de medicamentos. É uma profissional da maior confiança, daquelas com quem
+                                podemos contar sempre! </p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -374,7 +382,7 @@
                                     <i class="fa fa-quote-left"></i>
                                 </div>
                                 <div class="testimonial__author__text">
-                                    <h5>Catanis Greimar</h5>
+                                    <h5>Fátima Albasin</h5>
                                     <span>Businesswoman</span>
                                 </div>
                             </div>
@@ -385,8 +393,10 @@
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                             </div>
-                            <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
-                                vel facilisis ut labore et dolore magna aliqua accumsan lacus vel facilisis. </p>
+                            <p>A Dra Inês combina profissionalismo e carinho de forma exemplar. A sua dedicação e
+                                cuidado com as crianças e os seus
+                                pais transmitem segurança e confiança, tornando cada consulta uma experiência
+                                acolhedora.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -396,7 +406,7 @@
                                     <i class="fa fa-quote-left"></i>
                                 </div>
                                 <div class="testimonial__author__text">
-                                    <h5>Catanis Greimar</h5>
+                                    <h5>Charlotte McCormick</h5>
                                     <span>Businesswoman</span>
                                 </div>
                             </div>
@@ -407,8 +417,11 @@
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                             </div>
-                            <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
-                                vel facilisis ut labore et dolore magna aliqua accumsan lacus vel facilisis. </p>
+                            <p>We are incredibly lucky to have Dr Ines! We live quite remotely and she has been able to
+                                provide us with incredibly high
+                                quality care remotely and when we visit her clinic in Maputo. She is wonderfully
+                                supportive, very fast to respond, gives
+                                excellent advice and is extremely kind and caring. We are so grateful for her help! </p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -418,8 +431,8 @@
                                     <i class="fa fa-quote-left"></i>
                                 </div>
                                 <div class="testimonial__author__text">
-                                    <h5>Catanis Greimar</h5>
-                                    <span>Businesswoman</span>
+                                    <h5>Ariela Alves</h5>
+                                    <span>Mother</span>
                                 </div>
                             </div>
                             <div class="rating">
@@ -429,8 +442,24 @@
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                             </div>
-                            <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
-                                vel facilisis ut labore et dolore magna aliqua accumsan lacus vel facilisis. </p>
+                            <p>A Dra Inês tem sido a pediatra do nosso filho mesmo antes de ele nascer. Era importante
+                                para nós estabelecer essa
+                                relação antes do nascimento do nosso bebé, e mal sabíamos nós quão importante acabaria
+                                mesmo por ser. O nosso filho teve
+                                que ser internado ao nascer, e apesar do tratamento ter sido no hospital pelos pediatras
+                                locais, a Dra Inês foi crucial
+                                para nos ajudar a tranquilizar e entender o que estava a acontecer. Após o internamento,
+                                os serviços de acompanhamento
+                                ao domicílio prestados pela Dra Patrícia foram essenciais para nos ajudar a criar uma
+                                rotina e ficarmos mais descansados
+                                em relação à evolução na saúde e recuperação do peso do nosso filho. Além dos cuidados
+                                com o bebé, eu como mãe de
+                                primeira viagem e enfrentando dificuldades com o processo de amamentação, senti-me
+                                sempre apoiada e entendida, e sem a
+                                orientação e compaixão por parte das Dras tenho certeza que o nosso percurso teria sido
+                                mais atribulado. Os serviços de
+                                acompanhamento a domicílio foram sempre uma experiência muito positiva e
+                                tranquilizadora.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -440,8 +469,8 @@
                                     <i class="fa fa-quote-left"></i>
                                 </div>
                                 <div class="testimonial__author__text">
-                                    <h5>Catanis Greimar</h5>
-                                    <span>Businesswoman</span>
+                                    <h5>Rita Roquette</h5>
+                                    <span>Mother</span>
                                 </div>
                             </div>
                             <div class="rating">
@@ -451,30 +480,18 @@
                                 <i class="fa fa-star"></i>
                                 <i class="fa fa-star"></i>
                             </div>
-                            <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
-                                vel facilisis ut labore et dolore magna aliqua accumsan lacus vel facilisis. </p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="testimonial__item">
-                            <div class="testimonial__author">
-                                <div class="testimonial__author__icon">
-                                    <i class="fa fa-quote-left"></i>
-                                </div>
-                                <div class="testimonial__author__text">
-                                    <h5>Catanis Greimar</h5>
-                                    <span>Businesswoman</span>
-                                </div>
-                            </div>
-                            <div class="rating">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>
-                            <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
-                                vel facilisis ut labore et dolore magna aliqua accumsan lacus vel facilisis. </p>
+                            <p>A Dra. Inês é uma pediatra extremamente atenta e cuidadosa. Em cada consulta, demonstra
+                                um cuidado especial não só com a
+                                criança, mas também com a forma como a família está a lidar com as diferentes fases do
+                                desenvolvimento. De destacar o
+                                vasto conhecimento e apoio da Dra. Inês na área de alimentação e nutrição, que continua
+                                a ser uma referência para todos
+                                nós, inclusivé para orientar e ensinar para a nossa filha mais velha, de 6 anos.
+                                Funciona sempre ir recordando: “A Dra
+                                Inês disse que tinhas que beber mais leite e comer mais espinafres, lembras-te?”
+                                Desde que me tornei mãe, a Dra. Inês tem sido um suporte fundamental, sendo uma
+                                verdadeira referência para a saúde das
+                                minhas três filhas em Moçambique!</p>
                         </div>
                     </div>
                 </div>
@@ -808,9 +825,9 @@
     </section>
 
     <!-- Seção de Rodapé Início -->
-        <div id="footer">
-         
-        </div>
+    <div id="footer">
+
+    </div>
     <!-- Seção de Rodapé Fim -->
 
 
