--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -280,11 +280,10 @@
                     <div class="row">
                         <div class="card shadow" style="background-image: url('../img/bg1.png');">
                             <div class="card-more">
-                                <p class="border-bottom text-white">Neste espaço existem consultas em várias áreas,
-                                    tanto
-                                    para as pessoas que estão na “preparação para o parto”
-                                    como na “recuperação pós parto”. Clique em cada um dos ícones seguintes para saber
-                                    que consultas tem disponíveis.</p>
+                                <p class="border-bottom text-white">N’A Clínica estão disponíveis consultas de
+                                    diferentes especialidades, tal como variados workshops, desde a gravidez à
+                                    parentalidade. Clique em cada um dos ícones seguintes para descobrir os nossos
+                                    serviços.</p>
                                 <div class="d-flex">
                                     <div class="col-lg-6 col-md-6 text-center">
                                         <div class="card-icon">
