--- a/pages/header.html
+++ b/pages/header.html
@@ -50,13 +50,12 @@
                         </li>
 
                         <!-- Consultas -->
-                        <li><a class="arrow" href="consultas.html">Consultas <span class="dropdown-arrow"></span></a>
+                        <li><a class="arrow" href="../consultas.html">Consultas <span class="dropdown-arrow"></span></a>
                             <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                 <ul class="dropdown menu">
                                     <li>
-                                        <span>Amamentação</span>
+                                        <span><img src="../img/icons/amamentacao.png" alt="">Amamentação</span>
                                         <ul class="dropdown-sec">
-
                                             <li><a href="amament-pre-parto.html#pre">Consulta
                                                     Pré-parto</a></li>
                                             <li><a href="amament-pre-parto.html#pos">Consulta
@@ -79,7 +78,7 @@
                                                                             superficiais</a></li>
                                                                 </ul>
                                                                 <br> -->
-                                        <span>Enfermagem
+                                        <span><img src="../img/icons/ENFERM.png" alt="">Enfermagem
                                         </span>
                                         <ul class="dropdown-sec">
                                             <li><a href="enfermagem.html#domicilio">Apoio domiciliário no
@@ -90,7 +89,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Nutrição</span>
+                                        <span><img src="../img/icons/Nutrição.png" alt="">Nutrição</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="nutricao.html#A">Nutrição Geral</a></li>
                                             <li><a href="nutricao.html#B">Nutrição Infantil</a></li>
@@ -100,7 +99,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Pediatria</span>
+                                        <span><img src="../img/icons/pediatria-alt.png" alt="">Pediatria</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pediatria.html#A">Pré-natal</a></li>
                                             <li><a href="pediatria.html#B">Rotina</a></li>
@@ -110,7 +109,8 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Terapia ocupacional</span>
+                                        <span><img src="../img/icons/terapia-white.png" alt="">Terapia
+                                            ocupacional</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="terapia.html#A">Infantil</a></li>
                                             <li><a href="terapia.html#B">Neurológica</a></li>
@@ -120,7 +120,8 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <span>Testes diagnósticos</span>
+                                        <span><img src="../img/icons/teste.png" alt="">Testes
+                                            diagnósticos</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="teste.html#A">Teste do pezinho</a></li>
                                             <li><a href="teste.html#B">Teste rápido de amigdalite bacteriana</a>
@@ -194,7 +195,7 @@
                         </li>
 
                         <!-- Serviços Adicionais -->
-                        <li><a class="arrow" href="../additional-services.html">Apoio ao domicílio <span
+                        <li><a class="arrow" href="domicilio.html">Apoio ao domicílio <span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
                                 <li><a href="domicilio.html#A">Amamentação</a></li>
