--- a/header.html
+++ b/header.html
@@ -15,9 +15,7 @@
             <div class="col-lg-2">
                 <div class="header__top__right">
                     <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
@@ -62,7 +60,8 @@
 
                                         </ul>
                                         <br>
-                                        <span class="pt-4">Medicina do Viajante</span>
+                                        <span class="pt-4"><img src="../img/icons/viajante.png" alt="">Medicina do
+                                            Viajante</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/viajante.html">Consulta</a></li>
                                         </ul>
